# super-apl--learning-model

./: .gitignore  CMakeLists.txt  COMPLETION_REPORT.md  CRASH_FIX_VERIFICATION.md  DUCK_API.md  DUCK_API_QUICKSTART.md  DUCK_CHAT_API.md  DUCK_CRASH_FIX_SUMMARY.md  DUCK_QUICK_START.md  DUCK_SERVER_CLIENT_GUIDE.md  DUCK_TESTING_REPORT.md  DUCK_TRAINING_GUIDE.md  DuckChat_launcher.py  EXECUTIVE_SUMMARY.md  EXTERNAL_MODEL_SETUP.md  GIT_CLEANUP_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LARGE_MODEL_TRAINING_GUIDE.md  NESTED_ARRAY_OPTIMIZATION_SUMMARY.txt  PUSH_ISSUE_ANALYSIS.md  QUICKSTART.md  README.md  README_GUI.md  README_INFERENCE.md  README_OFFLOADING.md  README_RAG.md  RELEASE_NOTES.md  RELEASE_v1.1.0_SUMMARY.md  SETUP_GUIDE.md  TRAINING_COMPLETE.md  VERSION.json  build_duck.bat  build_engine.bat  build_exe.bat  calculate_training_time.py  chat_mixtral_47b.py  download_mixtral_47b.py  download_tools.ps1  duck_chat_interactive.py  (+24 more)
adapters/testmylora/: README.md  adapter_config.json
deploy/: duckchat_engine.json  external_model.example.json  external_stub_config.json
include/: quantized_types.h
scripts/: duck_server_bootstrap.py  duck_service.bat  duck_service.sh  test_api_smoke.py
src/api/: duck_api.py  duck_api_examples.py  duck_chat_api.py  duck_chat_api_4bit.py
src/apl/: model.apl
src/cpp/: CMakeLists_optimizer.txt  DUCK_CHAT_INTEGRATION.md  NESTED_ARRAY_OPTIMIZATION.md  README_OPTIMIZER.md  benchmark.cpp  engine_wrapper.cpp  examples.py  nested_array_optimizer.hpp  nested_array_optimizer.py  qgemm_kernel.cpp  (+1 more)
tools/: external_stub.py
(+275 files in other folders)
